@@ -23,27 +23,29 @@ DIST mdadm-3.2.6.tar.bz2 371525 SHA256 c44ed3b31238b41cffe67caffaf45067d01e095de
 DIST mdadm-3.3.1.tar.xz 407964 SHA256 d8c74112cfd77bdc1dbc1291fe8d9243c76d91bfa276fcb95f2a75ca7717ab02 SHA512 46fc1889e97d2d14b72ac26ee07eb4301467dc4a0e838ba89920253484fcd443749f3afccb3d792f7e468b20021d50dbc29dda7033d9b5a8fbaee664200f1981 WHIRLPOOL ca690bd35ab8ff475694d8f0420cd762704cc1777116edfdc9394973efa0d6decce1721dc1f7c8c84728d7434073cb6ab5161e5518c46aa8b4a7a5547ebb011d
 DIST mdadm-3.3.2.tar.xz 410628 SHA256 0f3a7e1a76b13892b79f9fceaf99ecb23513260389a768ac644ffa3ae06e5b8c SHA512 204363e41ec544ac44fa40ddf2758e31cbc1a88d7f038fa32a90b494b07be8e025be1bea8623029847ae495aabe3d1f2c503480db087d8a3dacd240003174936 WHIRLPOOL be7a7b77d6b53decfd03b2171e368d7162e48fe23835e664891acaa8cd1808236f9e34c27c573839c0f613be0e17ea94522df01a6537243eed132e87d3ea8d88
 DIST mdadm-3.3.3.tar.xz 413140 SHA256 f5b50a6b506697fb9968d660444447473b453f9eaefaa9b7d31c184693b8a28c SHA512 f2778e48a094bdf43861da0e83473cf021c3770575be0f494178dd0d386aa493eb486c2844b3b804f757f9168b7589afaa580b71777808c1f7905568e726fc66 WHIRLPOOL 6bc5991fc9eba7a7b79c175e46534070368c922fe3f1fb8ade67c97940df95d4bba9933b7e509e0b06b0e62034d72f739c6c15830e628c0cc51984751d9be08d
+DIST mdadm-3.3.4.tar.xz 413396 SHA256 8ae5f45306b873190e91f410709b00e51997b633c072b33f8efd9f7df022ca68 SHA512 4393e5d3a50ee148cc7503d48e7dda30419ed72a8098eaa9b883ff1ee81e09c66414edbe40d8c80b28d3ae7a7b5e5b11f6a8e14188a1066c19ac08ca89ddbcb6 WHIRLPOOL 41a8bcf399a11da82c9a0bdf49a31d8c71aeccfcfe2000edf78fe2933c6bdf6f10f2c5450b0589564a75e3a37195abe2e4c0dbbc42911ca9dda4e2d538618caa
 DIST mdadm_3.3-2.debian.tar.gz 127889 SHA256 c38b155e7395b35380d506458d979b82c5b853de996f21ccab50b1202d726301 SHA512 92e4c403542caba4b9afb870ba803e6bc7ade143b27efdc27e03b3407f322722a635457cce9e8c195a3ecd7cbce66fdebdd6046fc4f36836e56e27d5d838c037 WHIRLPOOL 8f8ef1142a79044093a5f55b181dc35a142b83041a59a9b71945aa6fe84cd089a7e1b183ec6b5db210a0d07e94efad0ab3a0d0341fc6cbbbf4da9d0254b5c737
 EBUILD mdadm-3.2.6-r1.ebuild 2061 SHA256 dcee1c9b4ae0f6c9c05c754fdd958e23bb8efca6bde82f3452a9f0a91a7e621e SHA512 4e64f5b0fccdada51e23e1ab1187d3be05300b4f08751432ac35603aa698800a67adbf483de3729d9a1f3d3ac5d579ed1dc3e02dea3555387f21d066271dd523 WHIRLPOOL 50f2a0714081ede4de6c4a4334be7cbc42e98a8dbd365479314ef76991c7d3a6d866e8527d1f3e2be30936b544fd131cc4727bb907ec7124f6595556932f1680
 EBUILD mdadm-3.3.1-r2.ebuild 2990 SHA256 8a6f70db105b5750fa55d590ba9ca6484ec2d762a10028aee03b450d602afd32 SHA512 ff5ae9863921b4cc57bc4fd0f745afaa5095b2504045083d883987783ca7ab1ebe13329871d521eebfa046c117dae24c1b5cf8a3e795ebdf10a3474f99e23d7a WHIRLPOOL 62ab909b2b12a06eb2781329b00f40a4e41c96c823f1723acc43b13f54fa555279e4a6a3543f3fc8462c9cf212ef1c4123a8624a58ba4ae5a7ffc60f79036bba
 EBUILD mdadm-3.3.2-r1.ebuild 2247 SHA256 82fa9c21b7ef1b2cf2b4967d4c3dc712322ae8c95c35fab6d154f144243ac78e SHA512 e6f09597b5081ecfc15fbca71a97bb6e505d7e7b68534039a2a64fade1c7189bc46840319c5e36eeb6d1503982afef151eec775dc6889e67792402f7c32eb775 WHIRLPOOL 0e015ace8e77ab7133e8d4d47123c4039fad09cfd672996d88e52d7efa74554d8cb450cb16c2d861059974348ecf7a62c7c6dfac731f86d6e42e3df7f4882dcb
 EBUILD mdadm-3.3.3.ebuild 2249 SHA256 dbeb02af50a3a8bf20882ceae095fbed0a732888ef91ca9e308e39117a37633a SHA512 99cb50920459186effe89ce460f9ad3475ce5896af39a5e77ee4ddd1f5d86027c5cfd9bd691f67370cf95db1ab230e642dc407e59b1473cad0b3f9f3560729a0 WHIRLPOOL f0f2123244acbb65c6715854ace4f3f86e38cbaa324d7583c0630aeee45dba4ad25e3011cfd396f9654f77880d81f366dcfa093e8980b744eeedbf7ea843da13
-MISC ChangeLog 31092 SHA256 8d3278333d614862b31e100ca655bc5f11651fe4fd675b13a8890adfa1c1e6f3 SHA512 9412787a891187a513623a0c11d996d3f9609f533b35e10f6b32e7a423feb59cf24f79db54b63336de392b4be0bd8b7afc4dd44c5b7619782fd68090d771907f WHIRLPOOL 82f8b86f4934e9fc0f9fe679b365d052a9553662f8e7f4d539a809cad0917a2d798e8fcacb89d380ac11a58db7f02e9660ba58f3d9abac634e86ddc5ff371dd4
+EBUILD mdadm-3.3.4.ebuild 2249 SHA256 2343ef3a88a538effc6cb1e6dadd55aca0ab5ad1e9997c3e9d4afe9e41d9f616 SHA512 0ba71bfbbc37a78b63c7a72a78f78c20fbcab99cca0da63ae5c36dcb2cf4449bd9d6c8ea35fceeaded1b4c0261a2b5f4ad033a7d6ba276468d8c954ad5d23535 WHIRLPOOL 8a674f2fa96252b9c50be246d1f492dfe4c86c2267f5fecd47d2262d4e6f4e58aaf8f421822c9ce7408ebf10c1e954e672ca400ef07b2940c556d0c3f7a39c5f
+MISC ChangeLog 31212 SHA256 20dc8e59ca2ba5b9d519d495d92bd4925645a3fa8e011956be4b34a7a43b2d15 SHA512 31f7be82e92367c9f613046053fdc4a7cbabf0101567a6adbfa5b151355b0622857df6645fc6a08cc0d9a993308a26a3561d115c5d1a4eb5f25d93990591763a WHIRLPOOL bb81d0547fc8e0dd3c14be8c3ff8605b74e46c893f714638531ce9f8fe36010a7c9245caca18b829532117789e5c21bcf81d1212da03527c1ec7224b110edc24
 MISC metadata.xml 164 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92 SHA512 8eb0d5153d388f6ea069c64b93882244816a0a09aecc0d73cb872121ce0eb24c5ccafa96aad0b620b2300f319e1af101fa7fa6c5d0d561719d49bb07da0a2eca WHIRLPOOL 11a1441bddb7a6c69653c663902b7da5767ae6ad515ac2aabfc42fe37927a1ccc21472deeee454009ff720201a41c3e4a912df42661a0a87150fb46126da2d52
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCgAGBQJVs0A8AAoJEPiazRVxLXTF+1sQALrxq8Hcuy6osAkObYTBvS0E
-yO94xsF9hvCdNfnz+aYbxbHJPrNiU0IOw319hXHfxhDYOWFLjvCy0ng297g3wpIc
-Y6WGWIoPMJJcsc4scuT2rRCjFn1a3fwu4LMX3pkDDsYg7K9/9BD6RAtWD4PqcvMF
-/ACmn2Yr6oempD4ckyjaAujivkhD7awwfhWzPiznQsihcfF4sLPRq7IIURr7DrUk
-iesoSAfTEf/gtfmlO1TCDSq6pYwkqUsRMwKnSxiA9H2XuWt7tfOXrsGSMhXsmXyU
-bF0alDxDDJZbbrN+ltypcZbB/b/aoLzwpZnW3QTQYAQwNdYTBRVgnrHzm0ndteXl
-v6zKHndUj7bfWvGx69nfAGIo8D5fBGc0DHPIioKwuKD0bGZVahAVEC+2ukF8TPQL
-fRG9DyfK5n2X+dJmokGpzZPmCETVeOD/r7JNvlbevGx+Fms2iXhwdaJ7KlDeGqA/
-OE6CtTbWOwktVWP8YhDaf/3MlRJeTPCQgNM9fDdCUpYN6xgMWTIVDehrD6Yb9KpZ
-JUKM2H1Tig1IcndgYjWXYzJo0PbKEuAAaXEamLCfdU9IP4cy84MVGvDu78AuqLpr
-DVhVTCg+e6vININVDlugZ2LeWndiGu0ERFB+SZoYWsHaApD8ELt/TGNVj+VoKIop
-TnTo3gdoybTkA9x8maYN
-=y2CS
+iQIcBAEBCgAGBQJVwG1bAAoJEPiazRVxLXTF89IQAKrE2MK3dyIQXgu4EGkyTPFv
+s9w8E1se11GQLGAILm9TJ8HGpQn3/ZcEHAUoQBzqSy+sjlS+UD241n2uau0px79f
+LUSHNYNN7VUQ66RZGQf4pmqxcRuDgyPOPrJgaidJzce7B/0+90OSbDCmGjtyf5EF
+40llF7/altWnLHGPuQ6iDNjFbHKT4UeeQeD4+uU5s6n1W67N+LatL9EptXoSBj0E
+0otg0dB9h6XnvkjgvvKAydV/F9soQnCD3xHTSB+NbLFQSdBaBF1q6R5CWd7/R3vj
+YIKaE5R8oXyWZtlH2H4EgQ6PpGP9Q83xRmUPiEU5ALBeZovJ1UsnONeMGE5Vgi9c
+NYTEL6MCwrfL/9sCBwywtYnxo+Wj1Bzi7Yc0ortRo3EQXEZQ4BwZFDfHuhkWZyL3
+UVn+rkGobRClJuRYvOUjjth8ah6toa1Z2YfCf7rIXDIam7zqPHhxguggZbvj4rgv
+2UfIgiE+dHTbtu5kNtC06MWm/0E5sOv7N8NYNlo0hEVnLet+sf+ULsi3MjAlR7ej
+2aiCf/vTESOtqX5tq8Epsxd6bfEcuGw5bZnfZZGqqvCz8Tn1HzxpPsNZ5Fq3oT5a
+6Mxm2vNPwU4pbnTTHbADJz/BoE40VOZUSoRQOOO84LfDRZqgoH6uUWo76cWJ4ahM
+Sa7n0P0pgXqCyx67CsbX
+=ycOT
 -----END PGP SIGNATURE-----
